# interpolation-methods

./: .gitignore  .gitmodules  LICENSE  README.md  index.md
doc/: bezier-vs-bspline.html  haarbach2018survey.bib  style.css
src/: CMakeLists.txt
src/app_runtime/: CMakeLists.txt  orientation.cpp  rigid-pairwise.cpp
src/app_visualization/: CMakeLists.txt  common.hpp  sampleposes.h  vis-orientation.cpp  vis-rigid.cpp
src/libinterpol/: CMakeLists.txt
src/libinterpol/ext/vmav-ros-pkg/: source
src/libinterpol/ext/vmav-ros-pkg/calibration/hand_eye_calibration/include/hand_eye_calibration/: DualQuaternion.h  QuaternionMapping.h
src/libinterpol/include/interpol/: euclidean.hpp  orientation.hpp  rigid.hpp
src/libinterpol/include/interpol/euclidean/: b_spline.hpp  bezier.hpp
src/libinterpol/include/interpol/orientation/: SU2.hpp  squad.hpp
src/libinterpol/include/interpol/rigid/: DH.hpp  R3xSO3.hpp  SE3.hpp
src/libinterpol/include/interpol/utils/: random.hpp  timer.hpp  vector_a.hpp
src/libinterpol/src/utils/: random.cpp  timer.cpp
src/libinterpolviz/: CMakeLists.txt
src/libinterpolviz/include/interpolviz/: Visualize.h  trajectories.h
src/libinterpolviz/include/interpolviz/trajectory/: Pose3.h  Trajectory.h  TrajectoryBezierRenormalized.h  TrajectoryLinear.h  TrajectorySpline.h  TrajectorySplineDualQuaternion.h  TrajectorySplineFusion.h  TrajectorySplineKimKimShin.h  TrajectorySquad.h
src/libinterpolviz/include/interpolviz/utils/: draw.h  fileutils.h  frustum.h  glfw_keymap.h  glheaders.h
src/libinterpolviz/src/: Visualize.cpp
src/libinterpolviz/src/trajectory/: Pose3d.cpp  Trajectory.cpp  TrajectoryBezierRenormalized.cpp  TrajectoryLinear.cpp  TrajectorySpline.cpp  TrajectorySplineDualQuaternion.cpp  TrajectorySplineFusion.cpp  TrajectorySplineKimKimShin.cpp  TrajectorySquad.cpp
webapp/: bezier-vs-bspline.html  deBoor.js  demo.js  em-init.js  em-style.css  plotBasis.js  style.css  vis-orientation-small.html
webapp/em/: vis-orientation.js  vis-orientation.wasm
